manifest/objects/Apttus__APTS_Template__c.object
<CustomObject>
    <description>Contract language templates available in the system. These templates specify guidance, language, local setitngs, and include Word attachment templates representing the bulk of actual contracts that can be used when creating a first draft . Templates can include standard and non-standard language.</description>
    <fields>
        <fullName>Apttus__ActivateVersion__c</fullName>
        <formula>IF (True, HYPERLINK(&quot;/apex/Apttus__TemplateFinder?source=salesforce&amp;callerMode=activate&amp;templateId=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_ActivateVersion&quot;, &quot;Activate&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activate Version</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ActiveVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to active version of the template</description>
        <inlineHelpText>Lookup to active version of the template</inlineHelpText>
        <label>Active Version</label>
        <referenceTo>Apttus__TemplateVersion__c</referenceTo>
        <relationshipLabel>Templates (Template Version)</relationshipLabel>
        <relationshipName>Templates1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Agreement_Types__c</fullName>
        <description>Note: If you add a new agreement record type, the type must also be manually added to this set of picklist values to keep record types in sync between agreements and templates.</description>
        <label>Agreement Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>BAA StandAlone</fullName>
                </value>
                <value>
                    <fullName>Equipment Schedule</fullName>
                </value>
                <value>
                    <fullName>HHS Services Agreement</fullName>
                </value>
                <value>
                    <fullName>Order Form</fullName>
                </value>
                <value>
                    <fullName>Non Disclosure Agreement</fullName>
                </value>
                <value>
                    <fullName>Employer Services Agreement</fullName>
                </value>
                <value>
                    <fullName>HHS Order Form Agreement</fullName>
                </value>
                <value>
                    <fullName>Employer Service Agreement - Self Service PDF</fullName>
                </value>
                <value>
                    <fullName>Non Disclosure Agreement - Self Service PDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__BusinessObject__c</fullName>
        <description>The API name of the business object associated with the template</description>
        <inlineHelpText>The API name of the business object associated with the template</inlineHelpText>
        <label>Business Object</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus__APTS_Agreement__c</fullName>
                </value>
                <value>
                    <fullName>Apttus_Proposal__Proposal__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Category__c</fullName>
        <description>Specifies the class of template or clauses into a high level category</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Term/Termination</fullName>
                </value>
                <value>
                    <fullName>Performance Guarantee</fullName>
                </value>
                <value>
                    <fullName>Employer Services Agreement</fullName>
                </value>
                <value>
                    <fullName>BAA Standalone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__CheckoutById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who has checked out the template</description>
        <inlineHelpText>User who has checked out the template</inlineHelpText>
        <label>Checkout By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CheckedoutTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__CheckoutDate__c</fullName>
        <description>Date when the template was checked out</description>
        <inlineHelpText>Date when the template was checked out</inlineHelpText>
        <label>Checkout Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__CheckoutVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Version id that the user checked out for edit</description>
        <inlineHelpText>Version id that the user checked out for edit</inlineHelpText>
        <label>Checkout Version</label>
        <referenceTo>Apttus__TemplateVersion__c</referenceTo>
        <relationshipLabel>Templates (Checked Out Version)</relationshipLabel>
        <relationshipName>CheckedoutTemplates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ClauseBehavior__c</fullName>
        <description>Indicates the read-only clause behavior in the contract document</description>
        <inlineHelpText>This field is currently applicable only for read-only clauses. Set the field value as Default to indicate the read-only clause cannot be deleted. Set the field value as Delete Read-only to permit users to delete the read-only clause.</inlineHelpText>
        <label>Clause Behavior</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>Delete Read-Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ClauseType__c</fullName>
        <description>Type of clause</description>
        <inlineHelpText>Type of clause</inlineHelpText>
        <label>Clause Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alternate Clause</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__ClonedFromId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the clause or template this was cloned from</description>
        <inlineHelpText>ID of the clause or template this was cloned from</inlineHelpText>
        <label>Cloned From</label>
        <referenceTo>Apttus__APTS_Template__c</referenceTo>
        <relationshipLabel>Clones</relationshipLabel>
        <relationshipName>Clones</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__ClonedFromReferenceId__c</fullName>
        <description>Reference identifier of the clause or template this was cloned from</description>
        <inlineHelpText>Reference identifier of the clause or template this was cloned from</inlineHelpText>
        <label>Cloned From Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__EnableAgreementClauseTracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables tracking of agreement clause changes</description>
        <inlineHelpText>Enables tracking of agreement clause changes</inlineHelpText>
        <label>Enable Agreement Clause Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__ExcludedMergeChildObjects__c</fullName>
        <description>Specifies the child objects to exclude for a given parent from the merge process. Only applicable when a child object has multiple parents.</description>
        <inlineHelpText>Specifies the child objects to exclude for a given parent from the merge process. Only applicable when a child object has multiple parents.</inlineHelpText>
        <label>Excluded Merge Child Objects</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__FrameworkFormat__c</fullName>
        <description>Template framework format</description>
        <inlineHelpText>Template framework format</inlineHelpText>
        <label>Framework Format</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre FX2</fullName>
                </value>
                <value>
                    <fullName>FX2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Guidance__c</fullName>
        <label>Guidance</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Denotes whether the contract template is active or not</description>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__IsTransient__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the template is a transient record. Usually when a template is created without checking in the document</description>
        <inlineHelpText>Indicates if the template is a transient record. Usually when a template is created without checking in the document</inlineHelpText>
        <label>Is Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Keywords__c</fullName>
        <description>Keywords on which the contract template can be searched and included in search layouts</description>
        <label>Keywords</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                    <default>true</default>
                    <label>English</label>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Chinese (Traditional)</fullName>
                </value>
                <value>
                    <fullName>Chinese (Simplified)</fullName>
                </value>
                <value>
                    <fullName>Portugese (Brazilian)</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Locale__c</fullName>
        <description>APTTUS RESERVED.  CUSTOMERS SHOULD NOT CHANGE VALUES</description>
        <label>Locale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English (United States)</fullName>
                    <default>true</default>
                    <label>English (United States)</label>
                </value>
                <value>
                    <fullName>English (United Kingdom)</fullName>
                </value>
                <value>
                    <fullName>English (Canada)</fullName>
                </value>
                <value>
                    <fullName>English (Ireland)</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>Norwegian</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Greek(Greece)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Mergefields2__c</fullName>
        <description>Merge fields used both in the template and clauses nested in the template. Automatically maintained by the Apttus Author.</description>
        <inlineHelpText>Merge fields used both in the template and clauses nested in the template. Automatically maintained by the Apttus Author.</inlineHelpText>
        <label>Mergefields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Mergefields__c</fullName>
        <description>Merge fields used in the template. Automatically maintained by the Apttus Author or manually entered using the following form: object1 (field1,field2,...fieldn); object2 (field1,field2,...fieldn); etc</description>
        <inlineHelpText>Merge fields used in the template.</inlineHelpText>
        <label>Mergefields (Internal)</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__NeedsPublishing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the template needs to be published.</description>
        <inlineHelpText>Indicates whether the template needs to be published.</inlineHelpText>
        <label>Needs Publishing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Next_Revision_Date__c</fullName>
        <label>Next Revision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus__NumberOfClauses__c</fullName>
        <description>Indicates the number of clauses associated with the template</description>
        <inlineHelpText>Indicates the number of clauses associated with the template</inlineHelpText>
        <label>Number Of Clauses</label>
        <summaryForeignKey>Apttus__TemplateClauseReference__c.Apttus__TemplateId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus__OutputPage__c</fullName>
        <description>The name of the Visualforce page to render a simple document in PDF format</description>
        <inlineHelpText>The name of the Visualforce page to render a simple document in PDF format</inlineHelpText>
        <label>Output Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PubDocId__c</fullName>
        <description>The published template document</description>
        <label>Published Doc ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PublishStatus__c</fullName>
        <description>The template publish status</description>
        <inlineHelpText>The template publish status</inlineHelpText>
        <label>Publish Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Publish__c</fullName>
        <description>&quot;Publish&quot; custom button</description>
        <formula>IF (True, HYPERLINK(&quot;/apex/Apttus__TemplatePublish?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Publish&quot;, &quot;Publish&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publish</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PublishedDate__c</fullName>
        <description>Date when the template was published</description>
        <inlineHelpText>Date when the template was published</inlineHelpText>
        <label>Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus__ReferenceId__c</fullName>
        <description>A unique external reference identifier</description>
        <externalId>true</externalId>
        <inlineHelpText>A unique external reference identifier</inlineHelpText>
        <label>Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__Subcategory__c</fullName>
        <label>Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                </value>
                <value>
                    <fullName>Virtual Care Services</fullName>
                </value>
                <value>
                    <fullName>Chronic Condition Management</fullName>
                </value>
                <value>
                    <fullName>HHS</fullName>
                </value>
                <value>
                    <fullName>Employer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__TermExceptionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the term exception associated with the clause or section</description>
        <inlineHelpText>ID of the term exception associated with the clause or section</inlineHelpText>
        <label>Term Exception</label>
        <referenceTo>Apttus__Term_Exception__c</referenceTo>
        <relationshipLabel>Sections/Clauses</relationshipLabel>
        <relationshipName>Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__TextContent__c</fullName>
        <description>The text content of the template document</description>
        <label>Text Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Type__c</fullName>
        <description>Specifies the contract template type which can be either a template or clause type.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                    <default>true</default>
                    <label>Agreement</label>
                </value>
                <value>
                    <fullName>Clause</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Section</fullName>
                </value>
                <value>
                    <fullName>Supporting Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Unpublish__c</fullName>
        <description>&quot;Unpublish&quot; custom button</description>
        <formula>IF ( LEN( Apttus__PubDocId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus__TemplateUnpublish?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus__Button_Unpublish&quot;, &quot;Unpublish&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unpublish</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Template</label>
    <listViews>
        <fullName>Apttus__Agreements</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Agreement</value>
        </filters>
        <label>Agreements</label>
    </listViews>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>Apttus__Type__c</columns>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Apttus__Clauses</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Clause</value>
        </filters>
        <label>Clauses</label>
    </listViews>
    <listViews>
        <fullName>Apttus__Proposals</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Proposal</value>
        </filters>
        <label>Proposals</label>
    </listViews>
    <listViews>
        <fullName>Apttus__Sections</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Section</value>
        </filters>
        <label>Sections</label>
    </listViews>
    <listViews>
        <fullName>Apttus__SupportingDocuments</fullName>
        <columns>NAME</columns>
        <columns>Apttus__IsActive__c</columns>
        <columns>Apttus__Category__c</columns>
        <columns>Apttus__Subcategory__c</columns>
        <columns>Apttus__Agreement_Types__c</columns>
        <columns>Apttus__Guidance__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Apttus__Type__c</field>
            <operation>equals</operation>
            <value>Supporting Document</value>
        </filters>
        <label>Supporting Documents</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>